alignment issue

--- a/src/App.css
+++ b/src/App.css
@@ -48,15 +48,15 @@ a{
 /* main ccontainer */
 
 .container{
-  height: 100vh;
-  min-height: fit-content;
+  height: fit-content;
+  min-height: 100vh;
   width: 100%;
   display: flex;
   justify-content: flex-start;
   align-items: center;
 }
 .blogs{
-  padding-top: 50rem;
+  padding-top: 5rem;
 }
 
 .carrousel{
